# indicator-synapse

./: CMakeLists.txt  README.md  io.github.ellie-commons.wingpanel-indicator-synapse_1.0.0_amd64.deb  meson.build
data/: Indicator.css  com.github.tom95.indicator-synapse.gresource.xml  gresource.xml  gschema.xml  io.github.ellie_commons.indicator-synapse  io.github.ellie_commons.indicator-synapse.desktop  meson.build  metainfo.xml
debian/: changelog  control
src/: CMakeLists.txt
src/indicator/: AutomaticScrollBox.vala  main.vala  match-item.vala  menu.vala
src/plugins/: chromium-plugin.vala  hybrid-search-plugin.vala  wolframalpha-plugin.vala
